--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,46 +1,57 @@
-version: 2
-jobs:
-  build:
-    docker:
-      - image: circleci/node:latest
-    steps:
-      - checkout
-      - run:
-          name: Install Dependencies
-          command: . build/install.sh
-      - run:
-          name: Create Scratch Org
-          command: . build/create-scratch-org.sh
-      - run:
-          name: Validate Components & Run Tests
-          command: . build/test.sh
-      - store_test_results:
-          path: test-results
-  deploy-prod:
-    docker:
-    - image: circleci/node:latest
-    steps:
-      - checkout
-      - run:
-          name: Install Dependencies
-          command: . build/install.sh
-      - run:
-          name: Login to Production
-          command: . build/setup-prod.sh
-      - run:
-          name: Deploy to Production
-          command: . build/deploy-prod.sh
+version: 2.1
+
+orbs:
+  # https://circleci.com/orbs/registry/orb/circleci/salesforce-sfdx
+  sfdx: circleci/salesforce-sfdx@2.1.0
+
 workflows:
   version: 2
-  validate:
+  on-push:
     jobs:
-      - build:
-          filters:
-            branches:
-              ignore:
-                - master
-      - deploy-prod:
-          filters:
-            branches:
-              only:
-                - master
+      - test
+
+jobs:
+  test:
+    executor: sfdx/default
+
+    environment:
+      # Expects the following set in CircleCI environment variables:
+      # SFDX_CONSUMER_KEY
+      # SFDX_JWT_KEY
+      # SFDX_USERNAME
+
+    steps:
+      - checkout
+      - setup_remote_docker
+      - sfdx/install
+      - run:
+          name: Install Evergreen CLI
+          command: |
+            echo "▶️  sfdx plugins:install @salesforce/plugin-evergreen"
+            sfdx plugins:install @salesforce/plugin-evergreen
+            echo "▶️  sfdx plugins"
+            sfdx plugins
+      - sfdx/auth:
+          defaultusername: $SFDC_PROD_USER
+      - sfdx/scratch-create:
+          scratch-alias: circleci-job
+          scratch-config: ./config/project-scratch-def.json
+      - run:
+          name: Deploy project to scratch org
+          command: sfdx force:source:push -u circleci-job
+      - run:
+          name: Tests
+          command: |
+            # run tests for each function
+            wd="$(pwd)"
+            for f in `ls $wd/functions/`; do
+              cd "$wd/functions/$f/"
+              echo "▶️  functions/$f: npm install"
+              npm install
+              echo "▶️  functions/$f: npm test"
+              npm test
+              echo "▶️  functions/$f: sfdx evergreen:function:build"
+              sfdx evergreen:function:build circleci-job
+            done
+      - sfdx/scratch-delete:
+          scratch-alias: circleci-job
