--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -8,7 +8,8 @@
     },
     "securitySettings": {
       "passwordPolicies": {
-        "enableSetPasswordInApi": true
+        "enableSetPasswordInApi": true,
+        "selfSetPasswordInApi":true
       }
     },
     "mobileSettings": {
