--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -8,8 +8,8 @@
     },
     "securitySettings": {
       "passwordPolicies": {
-        "enableSetPasswordInApi": true,
-        "selfSetPasswordInApi":true
+        "enableSetPasswordInApi": true
+        
       }
     },
     "mobileSettings": {
